--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "directories": {
       "output": "release"
     },
+    "artifactName": "${productName}_${version}.${ext}",
     "win": {
       "target": [
         "portable"
